Add status effects to HUD.